--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,10 @@ on:
     branches: [ master ]
 
   workflow_dispatch:
-    tags: 'Regression'
+    Inputs:
+    logLevel:
+      default: 'Warning'
+      required: true
 
 jobs:
   build:
